force-app/main/default/objects/Account/fields/AccountCode__c.field-meta.xml
<CustomField>
    <fullName>AccountCode__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>取引先コード</label>
    <type>AutoNumber</type>
</CustomField>