force-app/main/default/objects/Account/fields/AllocationPriority__c.field-meta.xml
<CustomField>
    <fullName>AllocationPriority__c</fullName>
    <label>引き当て順位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ExpirationDate</fullName>
                <default>true</default>
                <label>賞味期限</label>
            </value>
            <value>
                <fullName>ManufactureDate</fullName>
                <label>製造日</label>
            </value>
            <value>
                <fullName>ArrivalDate</fullName>
                <label>入庫日</label>
            </value>
            <value>
                <fullName>LotNumber</fullName>
                <label>ロット番号</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>