force-app/main/default/objects/Account/fields/BillingDateType__c.field-meta.xml
<CustomField>
    <fullName>BillingDateType__c</fullName>
    <description>変更があった場合、変更後に登録された注文から適応されます。</description>
    <label>適応基準</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LoadingDate</fullName>
                <label>積込日</label>
            </value>
            <value>
                <fullName>DeliveryDate</fullName>
                <default>true</default>
                <label>納品日</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>