force-app/main/default/objects/Account/fields/BillingTransferBank__c.field-meta.xml
<CustomField>
    <fullName>BillingTransferBank__c</fullName>
    <label>請求書振込先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MFJBank</valueSetName>
    </valueSet>
</CustomField>