force-app/main/default/objects/Account/fields/ClientHandler1__c.field-meta.xml
<CustomField>
    <fullName>ClientHandler1__c</fullName>
    <description>取引先に対する社内担当者、メイン担当</description>
    <label>社内担当者メイン</label>
    <length>255</length>
    <type>Text</type>
</CustomField>