force-app/main/default/objects/Account/fields/ClosingDate__c.field-meta.xml
<CustomField>
    <fullName>ClosingDate__c</fullName>
    <label>締日</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month_15</fullName>
                <label>15日</label>
            </value>
            <value>
                <fullName>Month_20</fullName>
                <label>20日</label>
            </value>
            <value>
                <fullName>Month_End</fullName>
                <default>true</default>
                <label>月末</label>
            </value>
            <value>
                <fullName>Irregular</fullName>
                <label>イレギュラー</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>