force-app/main/default/objects/Account/fields/DeliveryContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryContractEndDate__c</fullName>
    <label>契約終了日（配送）</label>
    <type>Date</type>
</CustomField>