force-app/main/default/objects/Account/fields/DeliveryContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryContractStartDate__c</fullName>
    <label>契約開始日（配送）</label>
    <type>Date</type>
</CustomField>