force-app/main/default/objects/Account/fields/DeliveryContractTermination__c.field-meta.xml
<CustomField>
    <fullName>DeliveryContractTermination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>契約解約（配送）</label>
    <type>Checkbox</type>
</CustomField>