force-app/main/default/objects/Account/fields/InvoiceTaxType__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTaxType__c</fullName>
    <label>請求税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TaxIncluded</fullName>
                <label>税込請求</label>
            </value>
            <value>
                <fullName>TaxExcluded</fullName>
                <default>true</default>
                <label>税抜請求</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>