force-app/main/default/objects/Account/fields/JprPaletteUrl_F__c.field-meta.xml
<CustomField>
    <fullName>JprPaletteUrl_F__c</fullName>
    <formula>HYPERLINK(&quot;https://portal.x-rental.jp/#/&quot;, &quot;JPRパレット&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JPRパレットURL</label>
    <type>Text</type>
</CustomField>