force-app/main/default/objects/Account/fields/KatakanaName__c.field-meta.xml
<CustomField>
    <fullName>KatakanaName__c</fullName>
    <label>カタカナ名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>