force-app/main/default/objects/Account/fields/PalletType__c.field-meta.xml
<CustomField>
    <fullName>PalletType__c</fullName>
    <label>パレット種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JPR</fullName>
            </value>
            <value>
                <fullName>PPallet</fullName>
                <label>Pパレ</label>
            </value>
            <value>
                <fullName>Template1</fullName>
                <default>true</default>
                <label>自社出力(南アルプス)</label>
            </value>
            <value>
                <fullName>Template2</fullName>
                <label>自社出力(サーフ)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>