force-app/main/default/objects/Account/fields/PaymentCycle__c.field-meta.xml
<CustomField>
    <fullName>PaymentCycle__c</fullName>
    <label>支払いサイクル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NextMonth_End</fullName>
                <default>true</default>
                <label>翌月末</label>
            </value>
            <value>
                <fullName>MonthAfterNext_End</fullName>
                <label>翌々月末</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>その他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>