force-app/main/default/objects/Account/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>支払い方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
                <default>true</default>
                <label>振込</label>
            </value>
            <value>
                <fullName>Cash</fullName>
                <label>現金</label>
            </value>
            <value>
                <fullName>Cheque</fullName>
                <label>小切手</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>