force-app/main/default/objects/Account/fields/PPaletteUrl_F__c.field-meta.xml
<CustomField>
    <fullName>PPaletteUrl_F__c</fullName>
    <formula>HYPERLINK(&quot;https://c.llink.jp/&quot;, &quot;Pパレ&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PパレURL</label>
    <type>Text</type>
</CustomField>