force-app/main/default/objects/Account/fields/PrintableAddress__c.field-meta.xml
<CustomField>
    <fullName>PrintableAddress__c</fullName>
    <description>帳票用</description>
    <formula>BillingState &amp; &quot; &quot; &amp;  BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>帳票用住所</label>
    <type>Text</type>
</CustomField>