force-app/main/default/objects/Account/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>ランク</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RankS</fullName>
                <label>S</label>
            </value>
            <value>
                <fullName>RankA</fullName>
                <default>true</default>
                <label>A</label>
            </value>
            <value>
                <fullName>RankB</fullName>
                <label>B</label>
            </value>
            <value>
                <fullName>RankC</fullName>
                <label>C</label>
            </value>
            <value>
                <fullName>RankD</fullName>
                <label>D</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>