force-app/main/default/objects/Account/fields/TaxRoundingMethod__c.field-meta.xml
<CustomField>
    <fullName>TaxRoundingMethod__c</fullName>
    <label>税小数点処理方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RoundOff</fullName>
                <default>true</default>
                <label>四捨五入</label>
            </value>
            <value>
                <fullName>RoundUp</fullName>
                <label>切り上げ</label>
            </value>
            <value>
                <fullName>RoundDown</fullName>
                <label>切り捨て</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>