force-app/main/default/objects/Account/fields/TermCategory__c.field-meta.xml
<CustomField>
    <fullName>TermCategory__c</fullName>
    <label>期制区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2terms</fullName>
                <label>２期制</label>
            </value>
            <value>
                <fullName>3terms</fullName>
                <default>true</default>
                <label>３期制</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>