force-app/main/default/objects/Account/fields/WarehouseContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>WarehouseContractEndDate__c</fullName>
    <label>契約終了日（倉庫）</label>
    <type>Date</type>
</CustomField>