force-app/main/default/objects/Account/fields/WarehouseContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>WarehouseContractStartDate__c</fullName>
    <label>契約開始日（倉庫）</label>
    <type>Date</type>
</CustomField>