force-app/main/default/objects/Account/fields/WarehouseContractTermination__c.field-meta.xml
<CustomField>
    <fullName>WarehouseContractTermination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>契約解約（倉庫）</label>
    <type>Checkbox</type>
</CustomField>