force-app/main/default/objects/Account/listViews/AllSubcontractor.listView-meta.xml
<ListView>
    <fullName>AllSubcontractor</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>AccountCode__c</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.PHONE2</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Subcontractor,Other</value>
    </filters>
    <label>すべての下請け業者</label>
</ListView>